# fusion-sim

./: ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  build.sh
crates/tok-sym-core/: Cargo.toml
crates/tok-sym-core/src/: contour.rs  devices.rs  diagnostics.rs  disruption.rs  equilibrium.rs  lib.rs  profiles.rs  simulation.rs  transport.rs  wasm_api.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: DisruptionGauge.tsx  EquilibriumCanvas.tsx  InfoPopup.tsx  PortView.tsx  SettingsDropdown.tsx  ShotPlanner.tsx  StatusPanel.tsx  TimeTraces.tsx  TutorialOverlay.tsx  UnifiedTracePanel.tsx  infoContent.tsx
web/src/components/portview/: camera.ts  config.ts  geometry.ts  glow.ts  index.tsx  plasma.ts  postprocessing.ts  types.ts  wallMaterial.ts
web/src/components/portview/shaders/: wall.frag  wall.vert
web/src/lib/: diiid-geometry.ts  fusionPhysics.ts  iter-geometry.ts  jet-geometry.ts  settingsContext.tsx  types.ts  useSimulation.ts  wasm.ts
web/src/pages/: ControlRoom.tsx  DeviceSelect.tsx  ProgramDischarge.tsx
web/src/wasm/: package.json  tok_sym_core.d.ts  tok_sym_core.js  tok_sym_core_bg.wasm  tok_sym_core_bg.wasm.d.ts
